# Renderer308

./: .cproject  .directory  .gitignore  .project  CMakeLists.txt  R308  ReadMe.txt~  Renderer308.launch  fragment.glsl  fragment.simple.glsl  fragment.x.glsl  fragment_cmap.glsl  fragment_combine.glsl  fragment_def.glsl  fragment_deferred.glsl  fragment_parallax.glsl  fragment_parallax_vertex.glsl  fragment_pdef.glsl  fragment_phong.glsl  fragment_postdef.glsl  fragment_postdef2.glsl  fragment_pp.glsl  geometry.glsl  geometry_cmap.glsl  geometry_pdef.glsl  geometry_postdef.glsl  lamp.blend  lamp.blend1  vertex.glsl  vertex.simple.glsl  vertex.x.glsl  vertex_cmap.glsl  vertex_deferred.glsl  vertex_parallax.glsl  vertex_phong.glsl  vertex_postdef.glsl
Debug/: OpenGLTemplate  Renderer308  makefile  objects.mk  subdir.mk
Debug/src/: Camera.d  Geometry.d  Loader.d  Plane.d  Shader.d  main.d  subdir.mk
res/assets/: Castle.blend  Castle.blend1  table2.blend  table2.blend1  table2.mtl
res/shaders/: fragment.glsl  fragment_combine.glsl  fragment_deferred.glsl  fragment_para.glsl  fragment_postdef.glsl  fragment_pp_backup.glsl  (+14 more)
src/: .gitignore  Camera.cpp  Camera.hpp  Engine.cpp  Engine.h  Engine.hpp  GBuffer.cpp  GBuffer.hpp  GeoObject.cpp  GeoObject.hpp  GeoObject_test.cpp  Geometry.cpp  Geometry.hpp  Lights.cpp  Lights.hpp  Loader.cpp  Loader.hpp  Plane.cpp  Plane.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderStorage.cpp  ShaderStorage.hpp  Texture.cpp  Texture.hpp  UniformBlock.cpp  UniformBlock.hpp  backups.txt  gbuffer.cpp  main.cpp
(+2 files in other folders)
